// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render with default styles 1`] = `
.circuit-0 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

<label
  class="circuit-0"
  for="some-id"
>
  Label
</label>
`;

exports[`Label should render with inline styles 1`] = `
.circuit-0 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  display: block;
}

<label
  class="circuit-0"
  for="some-id"
>
  Label
</label>
`;

exports[`Label should render with visually-hidden styles 1`] = `
.circuit-0 {
  font-size: 13px;
  line-height: 20px;
  display: block;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<label
  class="circuit-0"
  for="some-id"
>
  Label
</label>
`;
